--- a/app/package.json
+++ b/app/package.json
@@ -5,8 +5,7 @@
   "private": true,
   "scripts": {
     "build": "webpack",
-    "dev": "webpack-dev-server",
-    "start": "webpack-dev-server"
+    "dev": "webpack-dev-server"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^5.0.5",
